--- a/AlgeriaConfirmedFlightWASM/Pages/Counter.razor
+++ b/AlgeriaConfirmedFlightWASM/Pages/Counter.razor
@@ -4,8 +4,7 @@
 
 <h1>Contact</h1>
 
-<h3>Si vous avez des questions ou vous souhaitez signaler un bug, vous pouvez nous retrouver sur notre groupe  de <a href="https://www.facebook.com/groups/1020562312174262"><b>FACEBOOK</b></a></h3>
-
+ à faire ..
 
 @code {
    
